# Snake-IUA-Info-2.

./: README.md
PROYECTO INFO/: CMakeLists.txt  main.cpp  snake.cpp  snake.h
